--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "morgan": "^1.10.1",
     "nodemailer": "^6.10.0"
   }
 }
