--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,14 +12,25 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "express-validator": "^7.3.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.1",
+    "mongoose": "^8.20.1",
     "morgan": "^1.10.1",
-    "nodemailer": "^6.10.0"
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nanoid": "^5.1.6",
+    "node-cron": "^4.2.1",
+    "nodecron": "^0.2.0",
+    "nodemailer": "^6.10.1",
+    "razorpay": "^2.9.6",
+    "socket": "^1.1.39",
+    "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1"
   }
 }
