--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
+    "ejs": "^3.1.10",
     "express": "^4.22.1",
     "express-validator": "^7.3.1",
     "http": "^0.0.1-security",
